# text_editor

./: LICENSE  README.md
build-text_editor-Desktop_Qt_5_12_12_GCC_64bit-Debug/: CMakeCache.txt.prev  Makefile  cmake_install.cmake  text_editor
build-text_editor-Desktop_Qt_5_12_12_GCC_64bit-Debug/text_editor_autogen/: moc_predefs.h
build-text_editor-Desktop_Qt_5_12_12_GCC_64bit-Debug/text_editor_autogen/EWIEGA46WW/: moc_mainwindow.cpp
build-text_editor-Desktop_Qt_5_12_12_GCC_64bit-Debug/text_editor_autogen/include/: ui_mainwindow.h
res/: keywords_html_open
res/py/: py
src/: CMakeLists.txt  advancedmenu.cpp  advancedmenu.h  config.json  highlighter.cpp  highlighter.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pythonhighlighter.cpp  pythonhighlighter.h
src/res/: keywords_html_open
